Fix landscape lock

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -31,3 +31,10 @@
     transform: rotate(360deg);
   }
 }
+
+@media only screen and (orientation:landscape){
+  body {
+    height: 100vw;
+    transform: rotate(90deg);
+  }
+}
