--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -32,9 +32,9 @@
   }
 }
 
-@media only screen and (orientation:landscape){
+/* @media only screen and (orientation:landscape){
   body {
     height: 100vw;
     transform: rotate(90deg);
   }
-}
+} */
