--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -31,7 +31,7 @@
     transform: rotate(360deg);
   }
 }
-/* @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
@@ -41,4 +41,4 @@
     top: 100%;
     left: 0;
   } */
-/* } */
+ }
