--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -23,7 +23,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -41,4 +41,4 @@
     top: 100%;
     left: 0;
   } 
- }
+ } */
